libs/@local/hashql/ast/tests/ui/lowering/sanitizer/special-form-value.jsonc
//@ run: fail
//@ description: Ensure that special forms in invalid value positions are sanitized and error out
[
  "add",
  "::kernel::special_form::let",
  //~^ ERROR Special form cannot be used as a value
  "a"
]
